--- a/source/catalog.html
+++ b/source/catalog.html
@@ -595,7 +595,7 @@
             <use xlink:href="img/sprite_auto.svg#icon-close-modal"></use>
           </svg>
         </button>
-        <p class="login__title">Log In</p>
+        <p>Log In</p>
         <form action="https://echo.htmlacademy.ru" method="POST" enctype="multipart/form-data">
           <div class="login__inner login__inner--email">
             <input type="email" name="login-email" id="login-email" placeholder="Your E-mail" required>
@@ -610,7 +610,7 @@
             <a href="#">Forgot your password?</a>
           </div>
           <button class="login__btn" type="submit">Log In</button>
-          <p class="login__text">Don’t have an account? <a href="#">Sign up</a></p>
+          <p>Don’t have an account? <a href="#">Sign up</a></p>
         </form>
       </div>
     </div>
@@ -633,20 +633,20 @@
           <button class="filter__group" type="button">Product</button>
           <ul class="filter__list">
             <li>
-              <input class="visually-hidden" type="checkbox" name="necklaces" id="necklaces" checked>
-              <label for="necklaces">Necklaces</label>
+              <input class="visually-hidden" type="checkbox" name="necklaces" id="necklaces-fil" checked>
+              <label for="necklaces-fil">Necklaces</label>
             </li>
             <li>
-              <input class="visually-hidden" type="checkbox" name="chokers" id="chokers" checked>
-              <label for="chokers">Chokers</label>
+              <input class="visually-hidden" type="checkbox" name="chokers" id="chokers-fil" checked>
+              <label for="chokers-fil">Chokers</label>
             </li>
             <li>
-              <input class="visually-hidden" type="checkbox" name="rings" id="rings">
-              <label for="rings">Rings</label>
+              <input class="visually-hidden" type="checkbox" name="rings" id="rings-fil">
+              <label for="rings-fil">Rings</label>
             </li>
             <li>
-              <input class="visually-hidden" type="checkbox" name="earrings" id="earrings" checked>
-              <label for="earrings">Earrings</label>
+              <input class="visually-hidden" type="checkbox" name="earrings" id="earrings-fil" checked>
+              <label for="earrings-fil">Earrings</label>
             </li>
           </ul>
         </fieldset>
@@ -655,12 +655,12 @@
           <button class="filter__group" type="button">Material</button>
           <ul class="filter__list">
             <li>
-              <input class="visually-hidden" type="checkbox" name="gold" id="gold" checked>
-              <label for="gold">Gold</label>
+              <input class="visually-hidden" type="checkbox" name="gold" id="gold-fil" checked>
+              <label for="gold-fil">Gold</label>
             </li>
             <li>
-              <input class="visually-hidden" type="checkbox" name="silver" id="silver">
-              <label for="silver">Silver</label>
+              <input class="visually-hidden" type="checkbox" name="silver" id="silver-fil">
+              <label for="silver-fil">Silver</label>
             </li>
           </ul>
         </fieldset>
@@ -669,12 +669,12 @@
           <button class="filter__group" type="button">Collection</button>
           <ul class="filter__list">
             <li>
-              <input class="visually-hidden" type="checkbox" name="pink-flamingo" id="pink-flamingo" checked>
-              <label for="pink-flamingo">Pink flamingo</label>
+              <input class="visually-hidden" type="checkbox" name="pink-flamingo" id="pink-flamingo-fil" checked>
+              <label for="pink-flamingo-fil">Pink flamingo</label>
             </li>
             <li>
-              <input class="visually-hidden" type="checkbox" name="dreams" id="dreams">
-              <label for="dreams">Dreams</label>
+              <input class="visually-hidden" type="checkbox" name="dreams" id="dreams-fil">
+              <label for="dreams-fil">Dreams</label>
             </li>
           </ul>
         </fieldset>
@@ -691,11 +691,11 @@
             </div>
 
             <div class="price__range">
-              <label class="price__min-price" for="min-price">$
-                <input name="min-price" type="number" id="min-price" value="55">
+              <label class="price__min-price" for="min-price-fil">$
+                <input name="min-price" type="number" id="min-price-fil" value="55">
               </label>
-              <label class="price__max-price" for="max-price">$
-                <input name="max-price" type="number" id="max-price" value="155">
+              <label class="price__max-price" for="max-price-fil">$
+                <input name="max-price" type="number" id="max-price-fil" value="155">
               </label>
             </div>
           </div>
