--- a/source/product.html
+++ b/source/product.html
@@ -632,7 +632,7 @@
             <use xlink:href="img/sprite_auto.svg#icon-close-modal"></use>
           </svg>
         </button>
-        <p class="login__title">Log In</p>
+        <p>Log In</p>
         <form action="https://echo.htmlacademy.ru" method="POST" enctype="multipart/form-data">
           <div class="login__inner login__inner--email">
             <input type="email" name="login-email" id="login-email" placeholder="Your E-mail" required>
@@ -647,7 +647,7 @@
             <a href="#">Forgot your password?</a>
           </div>
           <button class="login__btn" type="submit">Log In</button>
-          <p class="login__text">Don’t have an account? <a href="#">Sign up</a></p>
+          <p>Don’t have an account? <a href="#">Sign up</a></p>
         </form>
       </div>
     </div>
@@ -657,7 +657,7 @@
   <div class="modal modal--cart">
     <div class="modal__content modal__content--cart cart">
       <div class="cart__wrap">
-        <p class="cart__title">The item was added to your cart</p>
+        <p>The item was added to your cart</p>
         <button class="cart__close" type="button">
           <span class="visually-hidden">Close</span>
           <svg width="14" height="14">
@@ -701,8 +701,8 @@
           </form>
         </div>
         <div class="cart__inner">
-          <p class="cart__text">You have 1 item in the cart</p>
-          <p class="cart__text cart__text--different">Cart subtotal: $ 115</p>
+          <p>You have 1 item in the cart</p>
+          <p>Cart subtotal: $ 115</p>
         </div>
         <div class="cart__links">
           <a class="cart__links-btn cart__links-btn--continue" href="catalog.html">Continue shopping</a>
