--- a/source/cart.html
+++ b/source/cart.html
@@ -19,7 +19,7 @@
     <div class="modal modal--show-cart modal--cart">
       <div class="modal__content modal__content--cart cart">
         <div class="cart__wrap">
-          <p class="cart__title">The item was added to your cart</p>
+          <p>The item was added to your cart</p>
           <button class="cart__close" type="button">
             <span class="visually-hidden">Close</span>
             <svg width="14" height="14">
@@ -63,8 +63,8 @@
             </form>
           </div>
           <div class="cart__inner">
-            <p class="cart__text">You have 1 item in the cart</p>
-            <p class="cart__text cart__text--different">Cart subtotal: $ 115</p>
+            <p>You have 1 item in the cart</p>
+            <p>Cart subtotal: $ 115</p>
           </div>
           <div class="cart__links">
             <a class="cart__links-btn cart__links-btn--continue" href="catalog.html">Continue shopping</a>
