--- a/source/login.html
+++ b/source/login.html
@@ -24,7 +24,7 @@
               <use xlink:href="img/sprite_auto.svg#icon-close-modal"></use>
             </svg>
           </button>
-          <p class="login__title">Log In</p>
+          <p>Log In</p>
           <form action="https://echo.htmlacademy.ru" method="POST" enctype="multipart/form-data">
             <div class="login__inner login__inner--email">
               <input type="email" name="login-email" id="login-email" placeholder="Your E-mail" required>
@@ -39,7 +39,7 @@
               <a href="#">Forgot your password?</a>
             </div>
             <button class="login__btn" type="submit">Log In</button>
-            <p class="login__text">Don’t have an account? <a href="#">Sign up</a></p>
+            <p>Don’t have an account? <a href="#">Sign up</a></p>
           </form>
         </div>
       </div>
