--- a/source/index.html
+++ b/source/index.html
@@ -556,7 +556,7 @@
         <h2><span>@</span>Chjewellery</h2>
         <a class="chjewellery__link" href="#">Follow Us</a>
         <ul>
-          <li>
+          <li class="chjewellery__item chjewellery__item--first">
             <picture>
               <!-- 1х: 130px; 2x: 260px -->
               <source media="(max-width: 767px)"
@@ -577,7 +577,7 @@
                 srcset="img/chjewellery1-desktop@2x.jpg 2x" loading="lazy" width="230" height="230" alt="Earrings">
             </picture>
           </li>
-          <li>
+          <li class="chjewellery__item chjewellery__item--second">
             <picture>
               <!-- 1х: 130px; 2x: 260px -->
               <source media="(max-width: 767px)"
@@ -598,7 +598,7 @@
                 srcset="img/chjewellery2-desktop@2x.jpg 2x" loading="lazy" width="230" height="154" alt="Earrings">
             </picture>
           </li>
-          <li>
+          <li class="chjewellery__item chjewellery__item--third">
             <picture>
               <!-- 1х: 145px; 2x: 290px -->
               <source media="(max-width: 767px)"
@@ -620,7 +620,7 @@
                 alt="Girl with earrings">
             </picture>
           </li>
-          <li>
+          <li class="chjewellery__item chjewellery__item--fourth">
             <picture>
               <!-- 1х: 145px; 2x: 290px -->
               <source media="(max-width: 767px)"
@@ -642,7 +642,7 @@
                 alt="Ring and chain">
             </picture>
           </li>
-          <li>
+          <li class="chjewellery__item chjewellery__item--fifth">
             <picture>
               <!-- 1х: 130px; 2x: 260px -->
               <source media="(max-width: 767px)"
@@ -663,7 +663,7 @@
                 srcset="img/chjewellery5-desktop@2x.jpg 2x" loading="lazy" width="218" height="191" alt="Earrings">
             </picture>
           </li>
-          <li>
+          <li class="chjewellery__item chjewellery__item--sixth">
             <picture>
               <!-- 1х: 126x; 2x: 252px -->
               <source media="(max-width: 1023px)"
@@ -678,7 +678,7 @@
                 srcset="img/chjewellery6-desktop@2x.jpg 2x" loading="lazy" width="218" height="218" alt="Earrings">
             </picture>
           </li>
-          <li>
+          <li class="chjewellery__item chjewellery__item--seventh">
             <picture>
               <!-- 1х: 134x; 2x: 268px -->
               <source media="(max-width: 1023px)"
