--- a/source/catalog.html
+++ b/source/catalog.html
@@ -135,7 +135,7 @@
               </ul>
             </fieldset>
 
-            <fieldset class="filter__item">
+            <fieldset class="filter__item filter__form--nojs">
               <button class="filter__group" type="button">Material</button>
               <ul class="filter__list">
                 <li>
@@ -149,7 +149,7 @@
               </ul>
             </fieldset>
 
-            <fieldset class="filter__item">
+            <fieldset class="filter__item filter__form--nojs">
               <button class="filter__group" type="button">Collection</button>
               <ul class="filter__list">
                 <li>
@@ -651,7 +651,7 @@
           </ul>
         </fieldset>
 
-        <fieldset class="filter__item">
+        <fieldset class="filter__item filter__item--open">
           <button class="filter__group" type="button">Material</button>
           <ul class="filter__list">
             <li>
@@ -665,7 +665,7 @@
           </ul>
         </fieldset>
 
-        <fieldset class="filter__item">
+        <fieldset class="filter__item filter__item--open">
           <button class="filter__group" type="button">Collection</button>
           <ul class="filter__list">
             <li>
