--- a/source/filter.html
+++ b/source/filter.html
@@ -47,7 +47,7 @@
             </ul>
           </fieldset>
 
-          <fieldset class="filter__item">
+          <fieldset class="filter__item filter__item--open">
             <button class="filter__group" type="button">Material</button>
             <ul class="filter__list">
               <li>
@@ -61,7 +61,7 @@
             </ul>
           </fieldset>
 
-          <fieldset class="filter__item">
+          <fieldset class="filter__item filter__item--open">
             <button class="filter__group" type="button">Collection</button>
             <ul class="filter__list">
               <li>
